--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
 decorator==5.2.1
 Flask==3.1.0
+flask-cors==5.0.1
 flatbuffers==25.2.10
+fonttools==4.57.0
 gast==0.4.0
 google-auth==2.38.0
 google-auth-oauthlib==0.4.6
@@ -19,30 +23,36 @@ grpcio==1.70.0
 h5py==3.13.0
 idna==3.10
 importlib_metadata==8.6.1
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.5
 joblib==1.4.2
 keras==2.10.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.7
 lazy_loader==0.4
 libclang==18.1.1
 librosa==0.10.2.post1
 llvmlite==0.43.0
 Markdown==3.7
 MarkupSafe==3.0.2
+matplotlib==3.9.4
 msgpack==1.1.0
+noisereduce==3.0.3
 numba==0.60.0
 numpy==1.23.5
 oauthlib==3.2.2
 opt_einsum==3.4.0
 packaging==24.2
 pandas==2.2.3
+pillow==11.1.0
 platformdirs==4.3.6
 pooch==1.8.2
 protobuf==3.19.6
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.1
 requests==2.32.3
@@ -61,6 +71,7 @@ tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.5.0
 threadpoolctl==3.5.0
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
